cluster/music/navidrome.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
  name: navidrome-public
  namespace: music
spec:
  ingressClassName: public-nginx
  rules:
  - host: navidrome-public.samcday.com
    http:
      paths:
      - backend:
          service:
            name: navidrome-generic
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts: [navidrome-public.samcday.com]
    secretName: public-certificate
